fixes of tests
